--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cardiac coherence</string>
-    <string name="resp_per_min">respiration per minute...</string>
+    <string name="resp_per_min">respirations per minute...</string>
     <string name="during">...For</string>
     <string name="seconds">seconds...</string>
     <string name="with_the_sounds">...With the sounds of...</string>
