Rewrote fadeIn and out logic in specific class. Enhanced display for session duration. Session ca now be chosen each 15 seconds of interval

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Cohérence Cardiaque</string>
     <string name="resp_per_min">respirations par minute...</string>
     <string name="during">...Pendant</string>
-    <string name="seconds">secondes...</string>
+    <string name="seconds">secondes</string>
     <string name="with_the_sounds">...Avec les bruits de...</string>
     <string name="waves">Vagues</string>
     <string name="river">Rivière</string>
@@ -16,4 +16,6 @@
     <string name="instruction_breath_out">Expirez lorsque le son de cloche est grave</string>
     <string name="start">Commencer</string>
     <string name="stop">Arrêter</string>
+    <string name="minutes">minutes</string>
+    <string name="and">et</string>
 </resources>
