--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Cardiac coherence</string>
     <string name="resp_per_min">respirations per minute...</string>
     <string name="during">...For</string>
-    <string name="seconds">seconds...</string>
+    <string name="seconds">seconds</string>
     <string name="with_the_sounds">...With the sounds of...</string>
     <string name="waves">Waves</string>
     <string name="river">River</string>
@@ -15,4 +15,6 @@
     <string name="instruction_breath_out">Breath out when the bell is low pitched</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="minutes">minutes</string>
+    <string name="and">and</string>
 </resources>
